--- a/vue-project/index.html
+++ b/vue-project/index.html
@@ -14,7 +14,7 @@
           <!-- Logo -->
           <div class="flex justify-center mb-8">
             <img
-              src="/images/smarthomes-logo-coffee.png"
+              src="./public/images/smarthomes-logo-coffee.png"
               alt=""
               class="w-22 h-10"
             />
