made design changes

--- a/vue-project/index.html
+++ b/vue-project/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="app">
-      <div class="min-h-screen bg-white flex items-center justify-center p-6">
+      <div class="min-h-dvh bg-white flex items-center justify-center p-6">
         <div class="max-w-2xl w-full text-center">
           <!-- Title -->
           <h1 class="relative inline-block text-4xl md:text-5xl font-bold text-black pb-1">
