made design changes

--- a/vue-project/index.html
+++ b/vue-project/index.html
@@ -12,16 +12,15 @@
       <div class="min-h-dvh bg-white flex items-center justify-center p-6">
         <div class="max-w-2xl w-full text-center">
           <!-- Title -->
-          <h1 class="relative inline-block text-4xl md:text-5xl font-bold text-black pb-1">
+          <h1 class="k text-4xl md:text-5xl font-bold text-black ">
     <span >SMART</span><span class="text-[#995829]">HOMES</span>
-    <span class="absolute bottom-0 left-0 right-0 border-b-4 border-dotted border-orange-500"></span>
-</h1>
+    
           <!-- Subtitle -->
           <p class="text-xl md:text-2xl text-black mb-12 font-normal mt-2">
-            There's Nothing Quite Like What We're <br/> Building.
+            There's Nothing Quite Like What We're Building.
           </p>
 
-          <p class="text-xl md:text-2xl  text-black ">
+          <p class="text-xl md:text-2xl font-normal text-black ">
             Check back soon to find out.
           </p>
       </div>
