made design changes

--- a/vue-project/index.html
+++ b/vue-project/index.html
@@ -8,23 +8,54 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div id="app">
-      <div class="min-h-dvh bg-white flex items-center justify-center p-6">
-        <div class="max-w-2xl w-full text-center">
-          <!-- Title -->
-          <h1 class="k text-4xl md:text-5xl font-bold text-black ">
-    <span >SMART</span><span class="text-[#995829]">HOMES</span>
-    
-          <!-- Subtitle -->
-          <p class="text-xl md:text-2xl text-black mb-12 font-normal mt-2">
-            There's Nothing Quite Like What We're Building.
+    <div
+      id="app"
+      class="min-h-dvh bg-white flex flex-col items-center pt-6 px-4 relative"
+    >
+      <div class="mt-20 inline-block">
+        <!-- Logo -->
+        <div class="flex justify-center">
+          <img
+            src="./public/images/smarthomes-logo-coffee.png"
+            alt=""
+            class="w-[80%] h-13"
+          />
+        </div>
+        <!-- Subtitle -->
+        <div class="max-w-2xl w-full text-center mx-auto">
+          <p
+            class="text-lg md:text-2xl text-black mb-12 font-normal mt-4 italic"
+          >
+            There's Nothing Quite Like What We're Building
           </p>
+        </div>
+      </div>
 
-          <p class="text-xl md:text-2xl font-normal text-black ">
-            Check back soon to find out.
-          </p>
+      <div class="max-w-2xl w-full mx-auto text-center mt-35">
+        <p class="text-lg md:text-2xl font-normal text-black tracking-tight">
+          Check back soon to find out more
+        </p>
+        <p class="text-lg md:text-2xl font-normal text-[#432818] tracking-wide">
+          Garuka vuba urebe uko bimeze
+        </p>
+      </div>
+
+      <div class="absolute bottom-10 flex flex-col items-center w-full">
+        <a
+          class="text-base md:text-xl font-normal text-black cursor-pointer tracking-[0.3em]"
+        >
+          www.smarthomes.rw
+        </a>
+
+        <p
+          class="text-base md:text-xl font-normal text-black mt-1 md:mt-2 tracking-tight"
+        >
+          Kigali | Bugesera | Musanze
+        </p>
+        <p class="text-base md:text-xl font-normal text-black mt-1 md:mt-2">
+          Tel: +250795878484
+        </p>
       </div>
     </div>
-      
   </body>
 </html>
